<resources>
    <string name="app_name">final-team2-android</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoia3l1bmdzZW9rLWNvcnkiLCJhIjoiY2s1cDl4OW9pMHRyeTNmbnN2bWdra2ljMiJ9.DKxnPEkyBnAWJqLBLZ8pMg</string>

    <string name="str_rank">랭킹</string>
    <string name="str_chat">채팅</string>
    <string name="str_profile">마이</string>
    <string name="str_idol">Idol</string>
    <string name="str_setting">Setting</string>
    <string name="str_school">School</string>
    <string name="str_idol_info">좋아하는 순위를 변경할 수 있어요.</string>
    <string name="str_idol_title">저장한 아이돌</string>
    <string name="str_edit_completed">수정완료</string>
    <string name="str_search_title">검색</string>
    <string name="str_idol_school_hint">아이돌 or 학교</string>
    <string name="str_school_hint">학교</string>
    <string name="str_idol_hint">아이돌</string>
    <string name="str_rank_en">Rank</string>
    <string name="str_time_end_title">투표마감</string>
    <string name="str_current_rank">%d위</string>
    <string name="str_map">Map</string>
    <string name="str_ok">확인</string>
    <string name="str_vote">투표하기</string>
    <string name="str_popup_vote_title">투표가\n완료되었습니다.</string>
    <string name="str_popup_attendance_title">출석 체크가\n완료되었습니다.</string>
</resources>
